<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/itTrangChu"
            android:title="@string/trang_chu"
            android:icon="@drawable/trangchu"
            android:checkable="true">
        </item>
        <item
            android:id="@+id/itThucDon"
            android:title="@string/thuc_don"
            android:icon="@drawable/logodangnhap">
        </item>
        <item
            android:icon="@drawable/caidat"
            android:title="@string/cai_dat">
        </item>
        <item
            android:id="@+id/itNhanVien"
            android:title="@string/nhan_vien"
            android:icon="@drawable/nhanvien">
        </item>
        <item
            android:title="@string/thong_ke"
            android:icon="@drawable/thongke">
        </item>
    </group>
</menu>