<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundDangNhap"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size30sp"
        android:text="@string/dang_nhap"
        android:layout_above="@+id/lnKhungDangNhap"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/size70dp"
        />

    <ImageView
        android:layout_width="@dimen/size150dp"
        android:layout_height="@dimen/size150dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="11dp"
        android:src="@drawable/logodangnhap" />

    <LinearLayout
        android:id="@+id/lnKhungDangNhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >

        <EditText
            android:id="@+id/edTenDangNhapDN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ten_dang_nhap"
            android:padding="@dimen/size10dp"
            android:layout_marginLeft="@dimen/size10dp"
            android:layout_marginRight="@dimen/size10dp"
            android:layout_marginBottom="@dimen/size10dp"
            android:background="@color/colorWhite"
            android:textColorHint="@color/colorGray"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="@dimen/size10dp"
            android:singleLine="true"
            android:textColor="@color/colorGray"
            />

        <EditText
            android:id="@+id/edtMatKhauDN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nhap_mat_khau"
            android:padding="@dimen/size10dp"
            android:layout_marginLeft="@dimen/size10dp"
            android:layout_marginRight="@dimen/size10dp"
            android:layout_marginBottom="@dimen/size10dp"
            android:background="@color/colorWhite"
            android:textColorHint="@color/colorGray"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="@dimen/size10dp"
            android:singleLine="true"
            android:textColor="@color/colorGray"
            android:password="true"
            />

        <Button
            android:id="@+id/btnDongYDN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dong_y"
            android:padding="@dimen/size10dp"
            android:background="@color/colorRed"
            android:layout_marginLeft="@dimen/size10dp"
            android:layout_marginRight="@dimen/size10dp"
            android:layout_marginBottom="@dimen/size10dp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/btnDangKyDN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dang_ky"
            android:background="@color/colorPrimary"
            android:layout_marginLeft="@dimen/size10dp"
            android:layout_marginRight="@dimen/size10dp"
            android:padding="@dimen/size10dp"
            android:textStyle="bold"
            />

    </LinearLayout>


</RelativeLayout>