<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context=".DangKyActivity">


    <TextView
        android:id="@+id/txtTieuDeDangKy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/size10dp"
        android:text="@string/dang_ky"
        android:textSize="@dimen/size30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/lnKhungDangKy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >

        <EditText
            android:id="@+id/edtTenDangNhapDK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/ten_dang_nhap"
            android:textColorHint="@color/colorGray"
            android:padding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="@dimen/size10dp"
            android:textColor="@color/colorGray"
            android:singleLine="true"
            />

        <EditText
            android:id="@+id/edtMatKhauDK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/nhap_mat_khau"
            android:textColorHint="@color/colorGray"
            android:padding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:drawableLeft="@drawable/password"
            android:password="true"
            android:drawablePadding="@dimen/size10dp"
            android:textColor="@color/colorGray"
            android:singleLine="true"
            />

        <RadioGroup
            android:id="@+id/rgGioiTinh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <RadioButton
                android:id="@+id/rbNam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nam"
                android:checked="true"
                />
            <RadioButton
                android:id="@+id/rbNu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nữ"
                />
        </RadioGroup>

        <Spinner
            android:id="@+id/spnQuyen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Spinner>

        <EditText
            android:id="@+id/edtNgaySinhDK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/ngay_sinh"
            android:textColorHint="@color/colorGray"
            android:padding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:drawableLeft="@android:drawable/ic_menu_my_calendar"
            android:drawablePadding="@dimen/size10dp"
            android:textColor="@color/colorGray"
            />

        <EditText
            android:id="@+id/edtCMNDDK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/chung_minh_nhan_dan"
            android:textColorHint="@color/colorGray"
            android:padding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:drawableLeft="@drawable/idcard"
            android:drawablePadding="@dimen/size10dp"
            android:textColor="@color/colorGray"
            android:numeric="integer"
            android:maxLength="8"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/btnDongYDK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dong_y"
                android:layout_weight="1"
                android:padding="@dimen/size10dp"
                android:layout_margin="@dimen/size10dp"
                android:background="@color/colorGreenButton"
                />

            <Button
                android:id="@+id/btnThoatDK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thoat"
                android:layout_weight="1"
                android:padding="@dimen/size10dp"
                android:layout_margin="@dimen/size10dp"
                android:background="@color/colorOrganButton"

                />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
